--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+
+  
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
