--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,20 @@
     />
     <meta name="theme-color" content="#000000" />
 
-  
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&family=
+    Oswald:wght@200&family=Piedra&family=Sriracha&display=swap" rel="stylesheet">
+ <!-- Font Awesome-->
+ <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+
     <title>AK Library-WIP</title>
   </head>
   <body style="visibility: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+
+
+    
   </body>
 </html>
