--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
 
-    <title>AK Library-WIP</title>
+    <title>INIGO Library</title>
   </head>
   <body style="visibility: hidden;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
